feat: refactor using packr.Box + add initial /api/metrics
