# api/api.pb.gw.go
@@ -285,6 +285,15 @@ func request_Server_SoundcloudTrack_0(ctx context.Context, marshaler runtime.Mar
 
 }
 
+func request_Server_Metrics_0(ctx context.Context, marshaler runtime.Marshaler, client ServerClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Void
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.Metrics(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
 // RegisterServerHandlerFromEndpoint is same as RegisterServerHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
 func RegisterServerHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
@@ -703,6 +712,26 @@ func RegisterServerHandlerClient(ctx context.Context, mux *runtime.ServeMux, cli
 
 	})
 
+	mux.Handle("GET", pattern_Server_Metrics_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_Server_Metrics_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Server_Metrics_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -744,6 +773,8 @@ var (
 	pattern_Server_SoundcloudTracks_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "soundcloud", "tracks"}, ""))
 
 	pattern_Server_SoundcloudTrack_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "soundcloud", "tracks", "track_id"}, ""))
+
+	pattern_Server_Metrics_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"api", "metrics"}, ""))
 )
 
 var (
@@ -784,4 +815,6 @@ var (
 	forward_Server_SoundcloudTracks_0 = runtime.ForwardResponseMessage
 
 	forward_Server_SoundcloudTrack_0 = runtime.ForwardResponseMessage
+
+	forward_Server_Metrics_0 = runtime.ForwardResponseMessage
 )
